--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-databasetype = sqlite
-database = db/cartuchos.db
-server  =
-user =
-pass = 
+databasetype = mysql
+database = j7w02kfnitklzyft
+user = nbimyjtw84eki34h
+pass = 	t6uet3ebc404dwh0
